@@ -64,6 +64,10 @@
                 <version>2.16</version>
                 <configuration>
                     <enableAssertions>false</enableAssertions>
+                    <!-- Travis-CI build workaround -->
+                    <forkCount>3</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                 </configuration>
             </plugin>
             <plugin>
